package module

import (
	marshallerusers "cnpc_backend/core/module/user/users/marshaller"
	protoobj "cnpc_backend/core/proto"
	"context"
	"errors"
	"log"
	"userservice/types"
)

func NewUserAccountServiceProto(ipc *types.InternalProviderControl) protoobj.UserAccountServiceProtoServer {
	return &UserAccountServiceProto{
		ipc: ipc,
	}
}

type UserAccountServiceProto struct {
	ipc *types.InternalProviderControl
	protoobj.UnimplementedUserAccountServiceProtoServer
}

// –≤—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è –≤ –∞–∫–∫–∞—É–Ω—Ç
// –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –Ω–∞ –≤—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è –≤ –∞–∫–∫–∞—É–Ω—Ç
func (s *UserAccountServiceProto) UserLoginAccount(ctx context.Context, obj *protoobj.UserAuthReqAccountReq) (*protoobj.LogInInfoRes, error) {
	// –î–µ—Å–µ—Ä–∏–∞–ª–∏–∑–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞ –Ω–∞ –≤—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
	userAuthReqAInfo := marshallerusers.UserAuthReqAccountReqDeserialization(obj)
	if userAuthReqAInfo == nil {
		return nil, errors.New("invalid_request_body")
	}

	// –ü–æ–∏—Å–∫ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ –Ω–∞ –æ—Å–Ω–æ–≤–µ –∑–∞–ø—Ä–æ—Å–∞ –∏ –¥–∞–Ω–Ω—ã—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
	userObj, isNewUser, err := s.authUser(userAuthReqAInfo)
	if err != nil {
		log.Println("üî¥ error UserLoginAccount: findUserInfo: ", err)
		return nil, errors.New("not_found")
	}

	// –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è –∏ –≤–æ–∑–≤—Ä–∞—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –≤—Ö–æ–¥–µ
	return s.userDetected(ctx, userObj, isNewUser, userAuthReqAInfo)
}

// –ø–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–π –æ –ø—Ä–æ—Ñ–∏–ª–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (s *UserAccountServiceProto) GetUserProfile(ctx context.Context, obj *protoobj.UsersMsg) (*protoobj.UsersMsg, error) {
	// logrus.Info("üöÄ GetUserProfile")
	paramsObj := marshallerusers.UsersProviderControlDeserialization(obj)

	objRes, errW := s.ipc.Database.UsersActions.GetUserDB(ctx, paramsObj)
	if errW != nil {
		return nil, errW.Err
	}
	return marshallerusers.UsersProviderControlSerialization(objRes), nil
}

// –ø–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–π –æ –ø—Ä–æ—Ñ–∏–ª—è—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
func (s *UserAccountServiceProto) GetUsersInfoList(ctx context.Context, obj *protoobj.UsersMsg) (*protoobj.UsersMsgList, error) {
	// logrus.Info("üöÄ GetUsersInfoList")
	paramsObj := marshallerusers.UsersProviderControlDeserialization(obj)

	objList, errW := s.ipc.Database.UsersActions.GetUsersListDB(ctx, paramsObj, map[string]string{}, nil, nil)
	if errW != nil {
		return nil, errW.Err
	}

	return marshallerusers.UsersProviderControlMsgListSerialization(objList), nil
}

// –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–π –æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ
func (s *UserAccountServiceProto) UpdateUserProfile(ctx context.Context, obj *protoobj.UsersMsg) (*protoobj.UsersMsg, error) {
	// logrus.Info("üöÄ UpdateUserProfile")
	paramsObj := marshallerusers.UsersProviderControlDeserialization(obj)

	userUp, errW := s.ipc.Database.UsersActions.UpdateUserDB(ctx, paramsObj)
	if errW != nil {
		return nil, errW.Err
	}
	return marshallerusers.UsersProviderControlSerialization(userUp), nil
}

// —Å–æ–∑–¥–∞–Ω–∏–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (s *UserAccountServiceProto) CreateNewUser(ctx context.Context, obj *protoobj.UsersMsg) (*protoobj.UsersMsg, error) {
	// logrus.Info("üöÄ CreateNewUser")
	paramsObj := marshallerusers.UsersProviderControlDeserialization(obj)

	userUp, errW := s.ipc.Database.UsersActions.CreateUserDB(ctx, paramsObj)
	if errW != nil {
		log.Println("üî¥ error CreateNewUser: CreateUserDB: ", errW.Err)
		return nil, errW.Err
	}

	return marshallerusers.UsersProviderControlSerialization(userUp), nil
}

// —É–¥–∞–ª–µ–Ω–∏–µ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
func (s *UserAccountServiceProto) DeleteUser(ctx context.Context, obj *protoobj.UsersMsg) (*protoobj.Empty, error) {
	// logrus.Info("üöÄ DeleteUser")
	paramsObj := marshallerusers.UsersProviderControlDeserialization(obj)

	errW := s.ipc.Database.UsersActions.DeleteUserDB(ctx, paramsObj)
	if errW != nil {
		return nil, errW.Err
	}
	return nil, nil
}
